--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
   "require": {
     "auth0/auth0-php": "5.1.0",
     "monolog/monolog": "1.23.0",
-    "vlucas/phpdotenv": "1.0.6",
-    "google/apiclient": "1.1.7"
+    "vlucas/phpdotenv": "2.4",
+    "google/apiclient": "^2.0"
   },
   "autoload": {
     "psr-4": {
